// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render green text 1`] = `
<span
  className="ui-text ui-text--size-medium ui-text--weight-normal ui-text--align-unset color-green hover-color-none e1krcyn16 css-0"
  onClick={undefined}
  style={Object {}}
>
  Hello World
</span>
`;

exports[`Text should render large text 1`] = `
<span
  className="ui-text ui-text--size-large ui-text--weight-normal ui-text--align-unset color-charcoal hover-color-none e1krcyn16 css-0"
  onClick={undefined}
  style={Object {}}
>
  Hello World
</span>
`;

exports[`Text should render shallow component ok 1`] = `
<span
  className="ui-text ui-text--size-medium ui-text--weight-normal ui-text--align-unset color-charcoal hover-color-none e1krcyn16 css-0"
  onClick={undefined}
  style={Object {}}
>
  Hello World
</span>
`;
